# lib/db/src/schema/inventario.ts
@@ -7,7 +7,9 @@ export const productosTable = pgTable("productos", {
   nombre: text("nombre").notNull(),
   codigo: text("codigo").notNull().unique(),
   marca: text("marca"),
+  tipo: text("tipo"),
   referencia: text("referencia"),
+  adicional: text("adicional"),
   precioCompra: numeric("precio_compra", { precision: 15, scale: 2 }).notNull(),
   precioVentaSinIva: numeric("precio_venta_sin_iva", { precision: 15, scale: 2 }).notNull(),
   precioVentaConIva: numeric("precio_venta_con_iva", { precision: 15, scale: 2 }).notNull(),
